<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <include layout="@layout/partial_title" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/ripple_gray">

            <Button
                android:id="@+id/fragment_misc_btn_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_gray"
                android:gravity="start|center_vertical"
                android:text="@string/fragment_miscellaneous_about"
                android:textColor="@color/black"
                android:textSize="21sp" />
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/ripple_gray">

            <Button
                android:id="@+id/fragment_misc_btn_getstarted"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_gray"
                android:gravity="start|center_vertical"
                android:text="@string/fragment_miscellaneous_getstarted"
                android:textColor="@color/black"
                android:textSize="21sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:text="@string/fragment_miscellaneous_follows"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:text="@string/fragment_miscellaneous_twitter"
            android:textColor="@color/fragment_collection_descrition_color"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="6dp"
            android:background="?attr/title_underline_color" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_misc_rv_followstwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="6dp"
            android:gravity="center"
            android:text="@string/fragment_miscellaneous_discord"
            android:textColor="@color/fragment_collection_descrition_color"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="6dp"
            android:background="?attr/title_underline_color" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_misc_rv_followsdiscord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:text="@string/fragment_miscellaneous_resources"
            android:textSize="28sp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_misc_cv_phantom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/fragment_miscellaneous_phantom"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/fragment_miscellaneous_phantomdesc"
                    android:textColor="@color/fragment_collection_descrition_color" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_misc_cv_moonrank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/fragment_miscellaneous_moonrankapp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/fragment_miscellaneous_moonrankdesc"
                    android:textColor="@color/fragment_collection_descrition_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_misc_cv_dexyz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/fragment_miscellaneous_dexyz"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/fragment_miscellaneous_dexyzdesc"
                    android:textColor="@color/fragment_collection_descrition_color" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_misc_cv_solscanio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/fragment_miscellaneous_solscanio"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/fragment_miscellaneous_solscaniodesc"
                    android:textColor="@color/fragment_collection_descrition_color" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>
</androidx.core.widget.NestedScrollView>