<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/partial_toolbar_backbutton" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/fragment_getstarted_stepone"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="28dp"
                        android:layout_marginTop="28dp"
                        android:gravity="center"
                        android:id="@+id/fragment_getstarted_steponedesc"
                        android:textSize="18sp" />

                    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/teal_200"
                        android:id="@+id/fragment_getstarted_cv_signup"
                        app:cardCornerRadius="10dp"
                        android:layout_marginVertical="12dp"
                        app:cardElevation="6dp"
                        android:layout_marginHorizontal="24dp"
                        android:foreground="@drawable/ripple_gray"
                        android:clickable="true"
                        android:layout_gravity="center_horizontal"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:text="@string/partial_signup_button"
                            android:textStyle="bold"
                            />

                    </androidx.cardview.widget.CardView>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/fragment_getstarted_steptwo"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="28dp"
                        android:gravity="center"
                        android:text="@string/fragment_getstarted_steptwodetails"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/fragment_getstarted_stepthree"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="28dp"
                        android:gravity="center"
                        android:text="@string/fragment_getstarted_stepthreedetails"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/fragment_getstarted_stepfour"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="28dp"
                        android:gravity="center"
                        android:text="@string/fragment_getstarted_stepfourdetails"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/fragment_getstarted_stepfive"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="28dp"
                        android:gravity="center"
                        android:text="@string/fragment_getstarted_stepfivedetails"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>