<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/aaaaaaaa"
    android:background="#00000000"
    >

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/fragment_sort_cardview_margintop"
        app:cardCornerRadius="@dimen/fragment_sort_cardview_frame_cornerradius">



        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/fragment_sort_linearlayout_marginbottom"
            android:fillViewport="true"
            android:layout_marginTop="45dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     android:text="@string/fragment_sort_attribute_list"
                    android:textSize="@dimen/fragment_sort_textview_attributeslist_textview_textsize" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_sort_rv_attributes_sort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/fragment_sort_textview_attributes_textview_margintop"
                    >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_sort_attributes"
                    android:textSize="@dimen/fragment_sort_textview_attributeslist_textview_textsize"
                    android:layout_marginEnd="@dimen/fragment_sort_textview_attributes_marginend"
                    />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/fragment_sort_textview_currentattribute_textsize"
                        android:id="@+id/fragment_sort_tv_attributename"
                        />

                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_sort_rv_attributes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_sort_cardview_exitbar_height"
            >


            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="@dimen/fragment_sort_cardview_imgcontainer_marginend"
                android:layout_gravity="end"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/general_circle_background_dark" />

                <ImageView
                    android:id="@+id/fragment_sort_img_exit"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_close_24" />


            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>



<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#ffffff"
    android:layout_gravity="bottom"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_sort_apply"
        android:layout_margin="@dimen/fragment_sort_button_search_margin"
        android:id="@+id/fragment_sort_button_search"
        />
</androidx.cardview.widget.CardView>
</FrameLayout>
